[metadata]
name = rolebypost
version = 1.0.0
author = Your Name
description = A Discord bot for play-by-post tabletop roleplaying games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CptConstantine/rolebypost
license = MIT

[options]
packages = find:
install_requires =
    discord.py>=2.0.0
    # Add other dependencies here

python_requires = >=3.9

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    rolebypost = main:main

[flake8]
max-line-length = 120

[mypy]
ignore_missing_imports = True